<project xmlns="http://maven.apache.org/POM/4.0.0"
	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>

	<groupId>br.org.biblivre</groupId>
	<artifactId>biblivre</artifactId>
	<packaging>war</packaging>

	<name>Biblivre</name>
	<version>6.0.0-alpha</version>
	<url>http://www.biblivre.org.br</url>

	<parent>
		<groupId>org.springframework.boot</groupId>
		<artifactId>spring-boot-starter-parent</artifactId>
		<version>2.0.5.RELEASE</version>
	</parent>

	<developers>
		<developer>
			<id>alberto</id>
			<name>Alberto Wagner Collavizza</name>
		</developer>
		<developer>
			<id>danniel</id>
			<name>Danniel Willian B. do Nascimento</name>
		</developer>
		<developer>
			<id>cleydyr</id>
			<name>Cleydyr B. de Albuquerque</name>
		</developer>
	</developers>

	<properties>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
		<jdk.version>1.8</jdk.version>
		<debug>false</debug>
		<sass.OutputStyle>:expanded</sass.OutputStyle>
		<dockerfile.version>1.4.1</dockerfile.version>
		<docker.image.prefix>cleydyr</docker.image.prefix>
	</properties>

	<repositories>
		<repository>
			<id>clojars.org</id>
			<url>http://clojars.org/repo</url>
		</repository>
		<repository>
			<id>central</id>
			<url>https://repo1.maven.org/maven2/</url>
		</repository>
		<repository>
			<id>legacy-libs</id>
			<url>file://${project.basedir}/lib</url>
		</repository>
	</repositories>

	<dependencies>
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-web</artifactId>
			<exclusions>
				<exclusion>
					<groupId>org.apache.tomcat.embed</groupId>
					<artifactId>tomcat-embed-core</artifactId>
				</exclusion>

				<exclusion>
					<groupId>org.springframework.boot</groupId>
					<artifactId>spring-boot-starter-logging</artifactId>
				</exclusion>
			</exclusions>
		</dependency>

		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-log4j2</artifactId>
		</dependency>

		<dependency>
			<groupId>org.apache.tomcat.embed</groupId>
			<artifactId>tomcat-embed-core</artifactId>
			<version>9.0.35</version><!--$NO-MVN-MAN-VER$ -->
			<scope>provided</scope>
		</dependency>

		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-jdbc</artifactId>
		</dependency>

		<dependency>
			<groupId>org.apache.logging.log4j</groupId>
			<artifactId>log4j-api</artifactId>
		</dependency>
		<dependency>
			<groupId>org.apache.logging.log4j</groupId>
			<artifactId>log4j-core</artifactId>
		</dependency>
		<dependency>
			<groupId>org.apache.logging.log4j</groupId>
			<artifactId>log4j-slf4j-impl</artifactId>
		</dependency>

		<dependency>
			<groupId>org.json</groupId>
			<artifactId>json</artifactId>
			<version>20180813</version>
		</dependency>

		<dependency>
			<groupId>javax.servlet</groupId>
			<artifactId>servlet-api</artifactId>
			<version>2.5</version>
			<scope>provided</scope>
		</dependency>

		<dependency>
			<groupId>javax.servlet.jsp</groupId>
			<artifactId>jsp-api</artifactId>
			<version>2.0</version>
			<scope>provided</scope>
		</dependency>

		<dependency>
			<groupId>org.springframework</groupId>
			<artifactId>spring-context</artifactId>
		</dependency>

		<dependency>
			<groupId>javax.servlet</groupId>
			<artifactId>jstl</artifactId>
		</dependency>

		<dependency>
			<groupId>org.apache.commons</groupId>
			<artifactId>commons-lang3</artifactId>
		</dependency>

		<dependency>
			<groupId>commons-collections</groupId>
			<artifactId>commons-collections</artifactId>
			<version>3.2.1</version>
		</dependency>

		<dependency>
			<groupId>org.apache.commons</groupId>
			<artifactId>commons-text</artifactId>
			<version>1.6</version>
		</dependency>

		<dependency>
			<groupId>commons-httpclient</groupId>
			<artifactId>commons-httpclient</artifactId>
			<version>3.1</version>
		</dependency>

		<dependency>
			<groupId>commons-fileupload</groupId>
			<artifactId>commons-fileupload</artifactId>
			<version>[1.3.3,)</version>
		</dependency>

		<dependency>
			<groupId>commons-io</groupId>
			<artifactId>commons-io</artifactId>
			<version>2.4</version>
		</dependency>

		<dependency>
			<groupId>org.apache.commons</groupId>
			<artifactId>commons-compress</artifactId>
			<version>[1.18,)</version>
		</dependency>

		<dependency>
			<groupId>joda-time</groupId>
			<artifactId>joda-time</artifactId>
		</dependency>

		<dependency>
			<groupId>org.postgresql</groupId>
			<artifactId>postgresql</artifactId>
		</dependency>

		<dependency>
			<groupId>org.marc4j</groupId>
			<artifactId>marc4j</artifactId>
			<version>2.8.3</version>
		</dependency>

		<dependency>
			<groupId>org.jzkit</groupId>
			<artifactId>jzkit2_z3950_plugin</artifactId>
			<version>2.2.3</version>
			<exclusions>
				<exclusion>
					<artifactId>marc4j</artifactId>
					<groupId>marc4j</groupId>
				</exclusion>
				<exclusion>
					<artifactId>xalan</artifactId>
					<groupId>xalan</groupId>
				</exclusion>
				<exclusion>
					<artifactId>maven-antrun-plugin</artifactId>
					<groupId>org.apache.maven.plugins</groupId>
				</exclusion>
				<exclusion>
					<artifactId>ant</artifactId>
					<groupId>ant</groupId>
				</exclusion>
			</exclusions>
		</dependency>

		<dependency>
			<groupId>org.jzkit</groupId>
			<artifactId>jzkit2_core</artifactId>
			<version>2.2.3</version>
		</dependency>

		<dependency>
			<groupId>com.googlecode.juniversalchardet</groupId>
			<artifactId>juniversalchardet</artifactId>
			<version>1.0.3</version>
		</dependency>

		<dependency>
			<groupId>net.objectlab.kit</groupId>
			<artifactId>datecalc-common</artifactId>
			<version>1.2.0</version>
		</dependency>
		<dependency>
			<groupId>net.objectlab.kit</groupId>
			<artifactId>datecalc-joda</artifactId>
			<version>1.2.0</version>
		</dependency>

		<dependency>
			<groupId>com.lowagie.legacy</groupId>
			<artifactId>itext</artifactId>
			<version>4.2.1</version>
		</dependency>

		<dependency>
			<groupId>javax.measure</groupId>
			<artifactId>unit-api</artifactId>
			<version>2.0-EDR</version>
		</dependency>

		<dependency>
			<groupId>tech.units</groupId>
			<artifactId>indriya</artifactId>
			<version>2.0-EDR</version>
		</dependency>

		<dependency>
			<groupId>org.freemarker</groupId>
			<artifactId>freemarker</artifactId>
		</dependency>

		<dependency>
			<groupId>commons-digester</groupId>
			<artifactId>commons-digester</artifactId>
			<version>2.1</version>
		</dependency>

		<dependency>
			<groupId>org.jzkit</groupId>
			<artifactId>a2j</artifactId>
			<version>2.0.4</version>
		</dependency>

		<dependency>
			<groupId>org.jzkit</groupId>
			<artifactId>jzkit2_service</artifactId>
			<version>2.2.3</version>
		</dependency>

		<dependency>
			<groupId>org.apache.jdbm</groupId>
			<artifactId>jdbm</artifactId>
			<version>1.0</version>
		</dependency>

		<dependency>
			<groupId>org.jzkit</groupId>
			<artifactId>jzkit2_jdbc_plugin</artifactId>
			<version>2.2.3</version>
		</dependency>

		<dependency>
			<groupId>com.zaxxer</groupId>
			<artifactId>HikariCP</artifactId>
		</dependency>
		<!-- / -->

	</dependencies>

	<build>
		<finalName>Biblivre6</finalName>
		<plugins>
			<plugin>
				<groupId>com.github.spotbugs</groupId>
				<artifactId>spotbugs-maven-plugin</artifactId>
				<version>4.0.0</version>
				<dependencies>
					<dependency>
						<groupId>com.github.spotbugs</groupId>
						<artifactId>spotbugs</artifactId>
						<version>4.0.3</version>
					</dependency>
				</dependencies>
			</plugin>
			<plugin>
				<groupId>com.dkanejs.maven.plugins</groupId>
				<artifactId>docker-compose-maven-plugin</artifactId>
				<version>2.5.1</version>
				<executions>
					<execution>
						<id>up</id>
						<phase>verify</phase>
						<goals>
							<goal>up</goal>
						</goals>
						<configuration>
							<composeFile>${project.basedir}/docker-compose.yml</composeFile>
							<detachedMode>true</detachedMode>
							<build>true</build>
						</configuration>
					</execution>
				</executions>
			</plugin>
			<plugin>
				<groupId>com.spotify</groupId>
				<artifactId>dockerfile-maven-plugin</artifactId>
				<version>${dockerfile.version}</version>
				<!-- Wire up to the default build phases -->
				<executions>
					<execution>
						<id>default</id>
						<goals>
							<goal>build</goal>
							<goal>push</goal>
						</goals>
					</execution>
				</executions>
				<configuration>
					<repository>${docker.image.prefix}/${project.artifactId}</repository>
					<tag>${project.version}</tag>
				</configuration>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-compiler-plugin</artifactId>
				<configuration>
					<source>${jdk.version}</source>
					<target>${jdk.version}</target>
					<debug>${debug}</debug>
					<optimize>!${debug}</optimize>
					<verbose>false</verbose>
					<showWarnings>true</showWarnings>
					<showDeprecation>true</showDeprecation>
				</configuration>
			</plugin>

			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-war-plugin</artifactId>
				<configuration>
					<webResources>
						<resource>
							<directory>WebContent</directory>
							<filtering>false</filtering>
							<excludes>
								<exclude>**/*.scss</exclude>
								<exclude>**/about_biblivre.jsp</exclude>
								<exclude>Tarefas.txt</exclude>
								<exclude>Traducoes - enUS.txt</exclude>
								<exclude>Traducoes - ptBR.txt</exclude>
								<exclude>Traducoes - es.txt</exclude>
							</excludes>
						</resource>
						<resource>
							<directory>WebContent</directory>
							<filtering>true</filtering>
							<includes>
								<include>**/about_biblivre.jsp</include>
							</includes>
						</resource>
					</webResources>
				</configuration>
			</plugin>

			<plugin>
				<groupId>org.jasig.maven</groupId>
				<artifactId>sass-maven-plugin</artifactId>
				<version>1.1.1</version>
				<configuration>
					<sassOptions>
						<always_update>true</always_update>
						<style>${sass.OutputStyle}</style>
						<debug_info>${debug}</debug_info>
					</sassOptions>
					<useCompass>true</useCompass>
					<resources>
						<resource>
							<source>
								<directory>${basedir}/WebContent/static/styles/scss</directory>
								<includes>
									<include>*.scss</include>
								</includes>
								<excludes />
							</source>
							<destination>${basedir}/WebContent/static/styles</destination>
						</resource>
					</resources>
				</configuration>
			</plugin>
		</plugins>

		<pluginManagement>
			<plugins>
				<plugin>
					<groupId>org.eclipse.m2e</groupId>
					<artifactId>lifecycle-mapping</artifactId>
					<version>1.0.0</version>
					<configuration>
						<lifecycleMappingMetadata>
							<pluginExecutions>
								<pluginExecution>
									<pluginExecutionFilter>
										<groupId>org.jasig.maven</groupId>
										<artifactId>sass-maven-plugin</artifactId>
										<versionRange>[1.0.2,)</versionRange>
										<goals>
											<goal>update-stylesheets</goal>
										</goals>
									</pluginExecutionFilter>
									<action>
										<ignore />
									</action>
								</pluginExecution>
							</pluginExecutions>
						</lifecycleMappingMetadata>
					</configuration>
				</plugin>
			</plugins>
		</pluginManagement>
	</build>
</project>